package com.gelvt.gofdp.simplefactory;

/**
 * Desc: 运载工具类型
 * Author: Elvin Zeng
 * Date: 17-6-11.
 */
public enum CarrierType {
    /**
     *汽车
     */
    CAR,
    /**
     * 飞机
     */
    PLANE,
    /**
     * 轮船
     */
    SHIP
}
